# mlops

./: README.md  data.py  main.py  model.py  my_app.py  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: codecheck.yaml  linting.yaml  tests.yaml  tests_1.yaml
configs/: config.yaml  model_conf.yaml  training_config.yaml
dockerfiles/: api.dockerfile
docs/: mkdocs.yaml
mlops_project/: README.md  evaluate.dockerfile  pyproject.toml  requirements.txt  tasks.py  test.ipynb  train.dockerfile
mlops_project/.devcontainer/: devcontainer.json
mlops_project/.github/workflows/: tests.yaml
mlops_project/configs/: training_config.yaml
mlops_project/dockerfiles/: train.dockerfile
mlops_project/docs/source/: index.md
mlops_project/models/: model.pth  model1.pth
mlops_project/outputs/2026-01-08/22-31-20/.hydra/: hydra.yaml
mlops_project/outputs/2026-01-08/22-37-30/.hydra/: config.yaml  hydra.yaml
mlops_project/outputs/2026-01-08/22-43-53/.hydra/: hydra.yaml
mlops_project/src/mlops_project/: data.py  evaluate.py  model.py  train.py  visualize.py
mlops_project/tests/: test_data.py  test_model.py  test_training.py
src/mlops_project/: data.py  evaluate.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_training.py
