[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn==1.8.0",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dataframes = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
