[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops"
version = "0.0.1"
description = "Project for MLOPS"
authors = [
  { name = "sofie", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codespell>=2.4.1",
    "gdown>=5.2.0",
    "invoke>=2.2",
    "ipykernel>=7.1.0",
    "ipython>=9.0.2",
    "markdown-exec[ansi]>=1.10",
    "matplotlib>=3.10.8",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-glightbox>=0.4",
    "mkdocs-material>=9.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-same-dir>=0.1.3",
    "fastapi==0.115.6",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pre-commit>=4.1",
    "pymdown-extensions>=10.14.3",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "ruff>=0.14.5",
    "sympy>=1.13.1",
    "hydra-core>=1.3.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "mkdocstrings-python==1.12.2",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
lint.select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
line-length = 130

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
files = ["src/mlops_project"]
explicit_package_bases = true